[package]
name = "witty-macros"
version = "0.1.0"
edition = "2021"

[features]
wasmer = []
wasmtime = []

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }

[dev-dependencies]
wasmer = "3.1.1"
wasmtime = "8.0.0"
witty = { path = "..", features = ["macros", "wasmer", "wasmtime"] }
